tests/pos/i1638.scala
package util.util

class C
