tests/neg/i9472a/A.scala
package example.reproduction

class Reproduction

